# rustapp

./: README.md  Readme.txt  docker-compose.yml
api_server/: Cargo.toml  wait-for-it.sh
api_server/src/: database.rs  main.rs
api_server/src/_tests/: init_db.rs  init_item.rs  rest_item.rs  rest_order.rs
api_server/src/models/: item.rs  order.rs
api_server/src/sql/: 00-recreate-db.sql  01-create-schema.sql  02-seed-items.sql
