[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.1", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# Web libs
warp = "0.3"
# DB Libs
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
rand = "0.8.5"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
